Fixed homepage responsiveness on mobile

--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -785,9 +785,10 @@ img {
   position: absolute;
   left: 50%; }
 
-.clothes-pics {
+.home-items-group {
   margin-bottom: 100px; }
-  .clothes-pics figure {
+  .home-items-group figure {
+    height: 300px;
     margin-bottom: 20px;
     position: relative;
     opacity: 0;
@@ -795,26 +796,34 @@ img {
     transition: all 0.3s ease-in-out;
     overflow: hidden;
     cursor: pointer; }
-    .clothes-pics figure.is-showing {
+    .home-items-group figure.is-showing {
       opacity: 1;
       transform: translateX(0px); }
-    .clothes-pics figure img {
+    .home-items-group figure img {
       display: block;
       transform: scale(1);
       transition: all 0.3s ease-in-out; }
-    .clothes-pics figure:hover figcaption {
+    .home-items-group figure:hover figcaption {
+      padding: 5px;
       left: 0%; }
-    .clothes-pics figure:hover img {
+    .home-items-group figure:hover img {
       transform: scale(1.1); }
-  .clothes-pics figcaption {
+    .home-items-group figure:hover .item-desc {
+      display: inline }
+  .home-items-group figcaption {
     position: absolute;
-    bottom: 10px;
-    left: -100%;
-    background: black;
+    top: 50px;
+    left: -120%;
+    background: none;
+    font-weight: bold; 
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     color: white;
-    padding: 2px 8px;
-    font-size: 11px;
+    padding: 2px 12px;
+    font-size: 20px;
     transition: all 0.3s ease-in-out; }
+  .home-items-group .item-desc {
+    font-size: 12px;
+    display: none }
 
 .large-window {
   height: 640px;
